Fix spacing images

--- a/css/main.css
+++ b/css/main.css
@@ -45,4 +45,5 @@ a:hover {
 
 h1 {
   display: block;
+  margin: 25px 10px;
 }
